@@ -11,6 +11,23 @@ java ^
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED ^
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED ^
 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED ^
+--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED ^
+--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED ^
+--add-exports java.base/java.lang=ALL-UNNAMED ^
+--add-exports java.base/java.io=ALL-UNNAMED ^
+--add-exports java.base/java.nio=ALL-UNNAMED ^
+--add-exports java.base/jdk.internal.ref=ALL-UNNAMED ^
+--add-exports java.base/jdk.internal.misc=ALL-UNNAMED ^
+--add-exports java.base/sun.nio.ch=ALL-UNNAMED ^
+--add-exports jdk.management/com.sun.management.internal=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED ^
+--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED ^
 -Xms512m ^
 -Xmx512m ^
 -Dlogback.configurationFile=logbackConfiguration.xml ^
